# TypoFixer

./: .gitignore  BUILD_TIME_COMPILATION.md  Cargo.toml  Download instructions.md  LICENSE  MENU_BAR_IMPLEMENTATION.md  MODEL_SETUP.md  Makefile  README-NEW.md  README.md  build.rs  build.sh  build_complete_system.sh  clean_coreml_cache.rs  convert_t5_to_coreml.py  convert_to_coreml.py  coreml.md  create_test_model.py  entitlements.plist  package.sh  requirements.txt  setup_model.py  setup_model.sh  setup_model_conversion.sh  simple_bert_converter.py  simple_build.sh  simple_t5_converter.py  startup_logs.txt  test_functionality.rs  test_logs.txt  test_quick.rs  test_sentiment_model.py
.github/workflows/: release.yml
coreml-setup/: convert_simple_corrector.py  convert_to_coreml.py  requirements.txt
examples/: menu_bar_demo.rs
src/: error.rs  main.rs  menu_bar.rs
src/accessibility/: applescript.rs  ax_api.rs  clipboard.rs  fallbacks.rs  mod.rs  text_extraction.rs
src/config/: mod.rs
src/hotkey/: mod.rs
src/spell_check/: coreml_corrector.rs  mod.rs
src/spell_check/coreml/: array_utils.rs  errors.rs  mod.rs  model_manager.rs  text_processor.rs  text_utils.rs
