[package]
name = "typo-fixer"
version = "0.1.0"
edition = "2021"

[dependencies]
# Use cocoa for now - it's more mature for this use case
cocoa = "0.26.1"
objc = "0.2.7"
core-foundation = "0.10.1"
core-graphics = "0.25.0"
accessibility-sys = "0.2.0"
libc = "0.2"
global-hotkey = "0.7.0"
once_cell = "1.21.3"
toml_edit = { version = "0.22.27", features = ["serde"] }
tracing = "0.1.41"
tracing-subscriber = "0.3"
chrono = "0.4.41"
# Ollama integration for LLM
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.20.0"

[profile.release]
opt-level = 3
strip = true
lto = true

[[bin]]
name = "typo-fixer"
path = "src/main.rs"